--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 License: MIT License
 Title: Download and Transform SINASC data from DATASUS
 Version: 0.1.0
-Author: Luan Augusto <luanguto87@gmail.com>
+Author: Luan Augusto Sousa Nascimento
 Maintainer: Luan Augusto <luanguto87@gmail.com>
 Description: This package is able to extract data about live birth (SINASC) from DATASUS.
     It is also possible connect the raw file with the respective label.
@@ -12,3 +12,10 @@ LazyData: true
 RoxygenNote: 7.3.2
 Depends: 
     R (>= 2.10)
+Imports:
+    dplyr,
+    lubridate,
+    read.dbc,
+    foreign,
+    tidyr
+Remotes: danicat/read.dbc
